add eslint rule, render Main

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,6 @@
   },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/prefer-stateless-function": 0,
   }
 }
