--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "csspin": "^1.1.4",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
+    "materialize-css": "^0.98.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "morgan": "^1.8.0",
