--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cors": "^2.8.1",
     "csspin": "^1.1.4",
     "express": "^4.14.1",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
