--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "express": "^4.14.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
+    "material-ui": "^0.17.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "morgan": "^1.8.0",
@@ -65,6 +66,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.4.1"
   },
   "scripts": {
