--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "csspin": "^1.1.4",
     "express": "^4.14.1",
     "jquery": "^3.1.1",
+    "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
     "mobx": "^3.0.2",
